# saphira

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml  ruff.yml
src/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
src/api/: decorators.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/api/migrations/: 0001_initial.py  0002_alter_student_code.py  0003_remove_presence_online.py
src/api/services/: public.py
src/saphira/: asgi.py  firebase_config.py  settings.py  urls.py  wsgi.py
tests/: test_adminDrawOnTalkView.py  test_adminRetrieveStudentInfoView.py  test_createStudentOnlinePresenceView.py
