[project]
name = "saphira"
version = "1.0.0"
description = "API de gerenciamento de serviços da Semana de SI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "cachecontrol==0.14.0",
    "cachetools==5.4.0",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "cryptography==44.0.1",
    "django==5.1.8",
    "django-cors-headers==4.4.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "firebase-admin==6.5.0",
    "google-api-core[grpc]==2.19.1",
    "google-api-python-client==2.141.0",
    "google-auth==2.33.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.1",
    "google-cloud-firestore==2.17.2",
    "google-cloud-storage==2.18.2",
    "google-crc32c==1.5.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.63.2",
    "grpcio==1.65.4",
    "grpcio-status==1.65.4",
    "httplib2==0.22.0",
    "idna==3.7",
    "msgpack==1.0.8",
    "proto-plus==1.24.0",
    "protobuf==5.27.3",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pycparser==2.22",
    "pyjwt[crypto]==2.9.0",
    "pyparsing==3.1.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "rsa==4.9",
    "sqlparse==0.5.1",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
manage = "uv run src/manage.py"
lint = "ruff check"
format = "ruff format"
